--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
     "phantom": "^0.8.4",
+    "phantomjs": "^1.9.19",
     "serve-favicon": "~2.3.0"
   }
 }
