--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "body-parser": "~1.13.2",
-    "cookie-parser": "~1.3.5",
-    "debug": "~2.2.0",
-    "express": "~4.13.1",
-    "jade": "~1.11.0",
-    "morgan": "~1.6.1",
-    "phantom": "^0.8.4",
-    "phantomjs": "^1.9.19",
-    "serve-favicon": "~2.3.0"
+    "body-parser": "^1.15.2",
+    "cookie-parser": "^1.4.3",
+    "debug": "*",
+    "express": "^4.14.0",
+    "jade": "*",
+    "morgan": "^1.7.0",
+    "phantom": "^2.1.11",
+    "phantomjs": "^2.1.7",
+    "serve-favicon": "*"
   }
 }
